# api

./: .env.example  .env.test  .gitignore  .oxlintrc.json  Cargo.toml  Dockerfile  Dockerfile.production  README.md  Taskfile.production.yaml  Taskfile.yaml  bunfig.toml  compose.production.yaml  compose.yaml  kysely-codegen.config.env  kysely-codegen.config.ts  kysely.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: cd.yaml  check.yaml  ci.yaml  github_container_registry.yaml
docker/: entrypoint.sql
migrations/: 1734810908594_create_extensions.ts  1734810914540_create_enums.ts  1734810920486_create_tables.ts  1734810926432_create_indices.ts  1738463637960_add_email_column_to_users_table.ts  1776045887358_add_user_role.ts
scripts/: generate-openapi.ts
source/: application.ts  configuration.ts  database.test.ts  database.ts  global.ts  index.ts  migrator.ts  test_helper.factories.ts  test_helper.ts  types.ts
source/commands/: database-create.ts  database-migrate.ts  database-rollback.ts  start.ts
source/middlewares/: authentication_middleware.test.ts  authentication_middleware.ts  authentication_optional_middleware.test.ts  authentication_optional_middleware.ts  authorization_middleware.test.ts  authorization_middleware.ts  logging_middleware.test.ts  (+2 more)
squiglink/: Cargo.toml
squiglink_api/: Cargo.toml
squiglink_database/: Cargo.toml
squiglink_studio/: Cargo.toml
src/: application.ts  configuration.ts  database.test.ts  database.ts  index.ts  test_helper.factories.ts  test_helper.ts  types.ts
(+164 files in other folders)
