[workspace]
members = ["squiglink_api", "squiglink_database"]
resolver = "2"

[workspace.dependencies.anyhow]
version = "1.0.93"

[workspace.dependencies.axum]
version = "0.8.0-alpha.1"
default-features = false
features = ["http1", "json", "macros", "tokio"]

[workspace.dependencies.clap]
version = "4.5.21"
default-features = false
features = ["color", "derive", "help", "std", "usage", "wrap_help"]

[workspace.dependencies.postgres-types]
version = "0.2.8"
features = ["derive"]

[workspace.dependencies.refinery]
version = "0.8.14"
default-features = false
features = ["tokio-postgres"]

[workspace.dependencies.serde]
version = "1.0.215"
default-features = false
features = ["derive"]

[workspace.dependencies.tokio-postgres]
version = "0.7.12"

[workspace.dependencies.tokio]
version = "1.4.11"
features = ["rt-multi-thread"]
